Bugs of text not visibale and incorrect link solved

--- a/Full Stack Foundation/Google App Engine/static/css/index.css
+++ b/Full Stack Foundation/Google App Engine/static/css/index.css
@@ -39,3 +39,11 @@
     font-size: 42px;
     font-weight: 900;
 }
+
+.signup-container {
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px 0 rgba(0,0,0,.44);
+    padding: 0;
+    max-width: 40%;
+}
